0.20 20110106
    . Improve event sending/handling
    . Add max_queue_size to limit queue backlog
    . Add stress-test for queue backlog
    . Collect statistics about roundtrips,callbacks,fetch,store
      in $repl->{stats}

0.19 20101211
    . Simplify Exporter usage
    . Add ->constant() method to (lazily) fetch Javascript constants
      and cache them on the Perl side of things.
    . Add more tests to ensure that we have no memory cycles

0.18 20101122
    . Add test for pop(), actually make pop() work
    . Add test for splice(), actually make splice() work
    + Add as_list, an exportable function in MozRepl::RemoteObject,
      that allows bulk-fetching of arrays.

0.17 20101120
    . Added test for circular reference fixed in 0.16
    . Added more support for command queueing. Destructors can now
      be queued until program exit, repl shutdown or
      until the next command is executed, whichever comes first.
    + Actually call the callback set up by ->__on_destroy
    . Added a test that the __on_destroy callbacks get called

0.16 20101119
    . Enable use_queue parameter (but leave it undocumented)
    + Fix memory leak when using ->declare. This should fix the messages
      during global destruction.

0.15 20101021
    . Filter object for only immediate properties. This means that inherited
      properties don't show up anymore in keys %$obj or using exists. You
      can still get at their values though.
      See L<http://yuiblog.com/blog/2006/09/26/for-in-intrigue/> for a
      discussion of filtering and why it should happen.
    . Implement C<delete> (and tests) for hashes

0.14 20101017
    . Fix ->__event() to create the event in the correct .document.
      This fixes intermittent errors that were raised if (for example)
      the Firefox Javascript Console was the topmost Firefox window.
    . Add a test that checks that the Changes file has a well-formed date
      for every version

0.13 20100810